Add image-repair.html to all pages: Added AI Image Repair tool card to index.html grid, added image-repair link to Image Tools dropdown in 52+ pages, replaced footer in image-repair.html with consistent footer from index.html

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -1,19 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Background Workspace | easyjpgtopdf</title>
-    <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script type="importmap">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Background Workspace | easyjpgtopdf</title>
+<link href="css/footer.css" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
+<script type="importmap">
     {
       "imports": {
         "onnxruntime-web": "https://cdn.jsdelivr.net/npm/onnxruntime-web@1.21.0/dist/ort.min.mjs"
       }
     }
   </script>
-  <style>
+<style>
     :root {
       --primary: #4361ee;
       --secondary: #3a0ca3;
@@ -59,109 +60,138 @@
       .actions { justify-content: center; }
     }
   </style>
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/theme-modern.css">
+<link href="css/header.css" rel="stylesheet"/>
+<link href="css/theme-modern.css" rel="stylesheet"/>
 </head>
 <body>
 <header>
-        <div class="container">
-            <nav class="navbar">
-                <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
-                <div class="nav-links">
-                    <div class="dropdown">
-                        <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="jpg-to-pdf.html">JPG to PDF</a>
-                            <a href="word-to-pdf.html">Word to PDF</a>
-                            <a href="excel-to-pdf.html">Excel to PDF</a>
-                            <a href="ppt-to-pdf.html">PowerPoint to PDF</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="pdf-to-jpg.html">PDF to JPG</a>
-                            <a href="pdf-to-word.html">PDF to Word</a>
-                            <a href="pdf-to-excel.html">PDF to Excel</a>
-                            <a href="pdf-to-ppt.html">PDF to PowerPoint</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="#">Edit PDF <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="merge-pdf.html">Merge PDF</a>
-                            <a href="split-pdf.html">Split PDF</a>
-                            <a href="compress-pdf.html">Compress PDF</a>
-                            <a href="crop-pdf.html">Crop PDF</a>
-                            <a href="protect-pdf.html">Protect PDF</a>
-                            <a href="unlock-pdf.html">Unlock PDF</a>
-                            <a href="add-page-numbers.html">Add Page Numbers</a>
-                            <a href="watermark-pdf.html">Watermark PDF</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="image-compressor.html">Image Compressor</a>
-                            <a href="image-resizer.html">Image Resizer</a>
-                            <a href="image-editor.html">Image Editor</a>
-                            <a href="image-watermark.html">Image Watermark</a>
-                            <a href="background-remover.html">Background Remover</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="auth-buttons">
-                    <button id="auth-button" class="auth-btn">Login</button>
-                </div>
-            </nav>
-        </div>
-    </header>
-
-  <main>
-    <section class="panel">
-      <h2><i class="fas fa-wand-magic-sparkles"></i> Background Removed</h2>
-      <div id="previewStage" class="preview-stage">
-        <img id="previewOriginal" class="preview-original" alt="Original" hidden>
-        <img id="previewResult" class="preview-result" alt="Result" hidden>
-        <div id="previewOverlay" class="preview-overlay">
-          <div class="preview-spinner"></div>
-          <span>AI Processing...</span>
-        </div>
-        <div id="previewPlaceholder" class="preview-placeholder hidden">
-          <i class="fas fa-image" style="font-size:3rem;opacity:0.3;"></i>
-          <span>No image loaded</span>
-        </div>
-      </div>
-      <div class="actions">
-        <button id="backgroundChange" class="btn btn-outline" disabled>
-          <i class="fas fa-palette"></i> Change Background
+<div class="container">
+<nav class="navbar">
+<a class="logo" href="index.html"><img alt="Logo" src="images/logo.png" style="height:54px;"/></a>
+<div class="nav-links">
+<div class="dropdown">
+<a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="jpg-to-pdf.html">JPG to PDF</a>
+<a href="word-to-pdf.html">Word to PDF</a>
+<a href="excel-to-pdf.html">Excel to PDF</a>
+<a href="ppt-to-pdf.html">PowerPoint to PDF</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="pdf-to-jpg.html">PDF to JPG</a>
+<a href="pdf-to-word.html">PDF to Word</a>
+<a href="pdf-to-excel.html">PDF to Excel</a>
+<a href="pdf-to-ppt.html">PDF to PowerPoint</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="merge-pdf.html">Merge PDF</a>
+<a href="split-pdf.html">Split PDF</a>
+<a href="compress-pdf.html">Compress PDF</a>
+<a href="edit-pdf.html">Pdf Editor</a>
+<a href="protect-pdf.html">Protect PDF</a>
+<a href="unlock-pdf.html">Unlock PDF</a>
+<a href="watermark-pdf.html">Watermark PDF</a>
+<a href="crop-pdf.html">Crop PDF</a>
+<a href="add-page-numbers.html">Add Page Numbers</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="image-repair.html">AI Image Repair</a>
+<a href="image-compressor.html">Image Compressor</a>
+<a href="image-resizer.html">Image Resizer</a>
+<a href="image-editor.html">Image Editor</a>
+<a href="background-remover.html">Image Background Remover</a>
+<a href="ocr-image.html">OCR Image</a>
+<a href="image-watermark.html">Image Watermark Tool</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="resume-maker.html">Resume Maker</a>
+<a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
+<a href="ai-image-generator.html">AI Image Generator</a>
+<a href="marriage-card.html">Marriage Card</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="excel-unlocker.html">Excel Unlocker</a>
+<a href="protect-excel.html">Protect Excel Sheet</a>
+</div>
+</div>
+</div>
+<div class="auth-buttons">
+<a class="auth-link" href="login.html">Sign In</a>
+<a class="auth-btn" href="signup.html"><i aria-hidden="true" class="fas fa-user-plus"></i><span>Signup</span></a>
+</div>
+<div class="user-menu" data-open="false" id="user-menu">
+<button aria-expanded="false" aria-haspopup="true" aria-label="Account menu" class="user-menu-toggle" id="user-menu-toggle" type="button">
+<span aria-hidden="true" class="user-initial">U</span>
+<i aria-hidden="true" class="fas fa-chevron-down"></i>
+</button>
+<div class="user-dropdown" hidden="" id="user-dropdown">
+<a data-user-nav="dashboard-overview" href="dashboard.html#dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
+<a data-user-nav="dashboard-billing" href="dashboard.html#dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
+<a data-user-nav="dashboard-payments" href="dashboard.html#dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
+<a data-user-nav="dashboard-orders" href="dashboard.html#dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
+<a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
+<button class="dropdown-logout" id="logout-button" type="button"><i class="fas fa-sign-out-alt"></i> Sign out</button>
+</div>
+</div>
+</nav>
+</div>
+</header>
+<main>
+<section class="panel">
+<h2><i class="fas fa-wand-magic-sparkles"></i> Background Removed</h2>
+<div class="preview-stage" id="previewStage">
+<img alt="Original" class="preview-original" hidden="" id="previewOriginal"/>
+<img alt="Result" class="preview-result" hidden="" id="previewResult"/>
+<div class="preview-overlay" id="previewOverlay">
+<div class="preview-spinner"></div>
+<span>AI Processing...</span>
+</div>
+<div class="preview-placeholder hidden" id="previewPlaceholder">
+<i class="fas fa-image" style="font-size:3rem;opacity:0.3;"></i>
+<span>No image loaded</span>
+</div>
+</div>
+<div class="actions">
+<button class="btn btn-outline" disabled="" id="backgroundChange">
+<i class="fas fa-palette"></i> Change Background
         </button>
-        <button id="downloadPng" class="btn btn-primary" disabled>
-          <i class="fas fa-download"></i> Download PNG
+<button class="btn btn-primary" disabled="" id="downloadPng">
+<i class="fas fa-download"></i> Download PNG
         </button>
-      </div>
-    </section>
-
-    <section class="panel">
-      <h2><i class="fas fa-info-circle"></i> Processing Info</h2>
-      <div id="statusMessage" class="status-card"></div>
-      
-      <!-- Animated Demo -->
-      <div style="margin: 16px 0; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(67,97,238,0.15);">
-        <img src="images/bg-removal-jungle-demo.svg" alt="AI Processing Demo" style="width: 100%; height: auto; display: block;">
-      </div>
-      
-      <div class="status-card">
-        <strong>✓ 3-Tier Smart Processing</strong>
-        <p>• <strong>0-15 MB</strong>: Fast browser (IMG.LY AI) - Free</p>
-        <p>• <strong>15-100 MB</strong>: Cloud server (Google Cloud Run) - Premium</p>
-        <p>• Automatic routing for optimal speed & cost</p>
-        <p>• Professional AI quality at every tier</p>
-      </div>
-    </section>
-  </main>
-
-  <script type="module">
+</div>
+</section>
+<section class="panel">
+<h2><i class="fas fa-info-circle"></i> Processing Info</h2>
+<div class="status-card" id="statusMessage"></div>
+<!-- Animated Demo -->
+<div style="margin: 16px 0; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(67,97,238,0.15);">
+<img alt="AI Processing Demo" src="images/bg-removal-jungle-demo.svg" style="width: 100%; height: auto; display: block;"/>
+</div>
+<div class="status-card">
+<strong>✓ 3-Tier Smart Processing</strong>
+<p>• <strong>0-15 MB</strong>: Fast browser (IMG.LY AI) - Free</p>
+<p>• <strong>15-100 MB</strong>: Cloud server (Google Cloud Run) - Premium</p>
+<p>• Automatic routing for optimal speed &amp; cost</p>
+<p>• Professional AI quality at every tier</p>
+</div>
+</section>
+</main>
+<script type="module">
     const STORAGE_KEYS = {
       original: 'bgRemover:original',
       filename: 'bgRemover:filename',
@@ -583,23 +613,22 @@
 
     document.getElementById('footerYear').textContent = new Date().getFullYear();
   </script>
-
 <footer>
-        <div class="container footer-inner">
-            <div class="footer-company-links">
-                <span>Company</span>
-                <a href="index.html#about">About Us</a>
-                <a href="index.html#contact">Contact</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-            </div>
-            <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone.</p>
-            <p class="footer-credits">
+<div class="container footer-inner">
+<div class="footer-company-links">
+<span>Company</span>
+<a href="index.html#about">About Us</a>
+<a href="index.html#contact">Contact</a>
+<a href="privacy-policy.html">Privacy Policy</a>
+<a href="terms-of-service.html">Terms of Service</a>
+</div>
+<p class="footer-brand-line">© easyjpgtopdf — Free PDF &amp; Image Tools for everyone.</p>
+<p class="footer-credits">
                 Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
                 <a href="attributions.html">See full acknowledgements</a>.
             </p>
-        </div>
-    </footer>
-    <script type="module" src="js/auth.js"></script>
+</div>
+</footer>
+<script src="js/auth.js" type="module"></script>
 </body>
 </html>
