--- a/index.html
+++ b/index.html
@@ -1752,6 +1752,7 @@
                     <div class="dropdown">
                         <a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
+                            <a href="image-repair.html">AI Image Repair</a>
                             <a href="image-compressor.html">Image Compressor</a>
                             <a href="image-resizer.html">Image Resizer</a>
                             <a href="image-editor.html">Image Editor</a>
@@ -1956,6 +1957,13 @@
                 </div>
 
                 <!-- Image Tools -->
+                <div class="tool-card" onclick="location.href='image-repair.html'">
+                    <div class="tool-icon">
+                        <i class="fas fa-magic"></i>
+                    </div>
+                    <h3>AI Image Repair</h3>
+                    <p>Fix blurry, scratched, or damaged photos with AI.</p>
+                </div>
                 <div class="tool-card" onclick="location.href='image-compressor.html'">
                     <div class="tool-icon">
                         <i class="fas fa-file-image"></i>
