--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
+
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Add Page Numbers to PDF - easyjpgtopdf</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="css/header.css">
-<link rel="stylesheet" href="css/footer.css">
-<link rel="stylesheet" href="css/theme-modern.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+<link href="css/header.css" rel="stylesheet"/>
+<link href="css/footer.css" rel="stylesheet"/>
+<link href="css/theme-modern.css" rel="stylesheet"/>
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}
 :root{--primary:#4361ee;--primary-dark:#3a0ca3;--light:#f8f9fa;--dark:#212529;--gray:#6c757d}
@@ -49,33 +50,89 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <header>
 <div class="container">
 <nav class="navbar">
-<a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
+<a class="logo" href="index.html"><img alt="Logo" src="images/logo.png" style="height:54px;"/></a>
 <div class="nav-links">
-<div class="dropdown"><a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="jpg-to-pdf.html">JPG to PDF</a><a href="word-to-pdf.html">Word to PDF</a><a href="excel-to-pdf.html">Excel to PDF</a><a href="ppt-to-pdf.html">PowerPoint to PDF</a></div></div>
-<div class="dropdown"><a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="pdf-to-jpg.html">PDF to JPG</a><a href="pdf-to-word.html">PDF to Word</a><a href="pdf-to-excel.html">PDF to Excel</a><a href="pdf-to-ppt.html">PDF to PowerPoint</a></div></div>
-<div class="dropdown"><a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="merge-pdf.html">Merge PDF</a><a href="split-pdf.html">Split PDF</a><a href="compress-pdf.html">Compress PDF</a><a href="edit-pdf.html">Pdf Editor</a><a href="protect-pdf.html">Protect PDF</a><a href="unlock-pdf.html">Unlock PDF</a><a href="watermark-pdf.html">Watermark PDF</a><a href="crop-pdf.html">Crop PDF</a><a href="add-page-numbers.html">Add Page Numbers</a></div></div>
-<div class="dropdown"><a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="image-compressor.html">Image Compressor</a><a href="image-resizer.html">Image Resizer</a><a href="image-editor.html">Image Editor</a><a href="background-remover.html">Image Background Remover</a><a href="ocr-image.html">OCR Image</a><a href="image-watermark.html">Image Watermark Tool</a></div></div>
-<div class="dropdown"><a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="resume-maker.html">Resume Maker</a><a href="biodata-maker.html">Marrige Biodata-Data Maker</a><a href="ai-image-generator.html">AI Image Generator</a><a href="marriage-card.html">Marriage Card</a></div></div>
-<div class="dropdown"><a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
-<div class="dropdown-content"><a href="excel-unlocker/" target="_blank">Excel Unlocker</a><a href="protect-excel.html">Protect Excel Sheet</a></div></div>
+<div class="dropdown">
+<a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="jpg-to-pdf.html">JPG to PDF</a>
+<a href="word-to-pdf.html">Word to PDF</a>
+<a href="excel-to-pdf.html">Excel to PDF</a>
+<a href="ppt-to-pdf.html">PowerPoint to PDF</a>
 </div>
-<div class="auth-buttons"><a href="login.html" class="auth-link">Sign In</a><a href="signup.html" class="auth-btn"><i class="fas fa-user-plus"></i><span>Signup</span></a></div>
-<div id="user-menu" class="user-menu" data-open="false">
-<button id="user-menu-toggle" class="user-menu-toggle" type="button"><span class="user-initial">U</span><i class="fas fa-chevron-down"></i></button>
-<div class="user-dropdown" id="user-dropdown" hidden>
-<a href="dashboard.html#dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
-<a href="dashboard.html#dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
-<a href="dashboard.html#dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
-<a href="dashboard.html#dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders & Subscriptions</a>
+</div>
+<div class="dropdown">
+<a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="pdf-to-jpg.html">PDF to JPG</a>
+<a href="pdf-to-word.html">PDF to Word</a>
+<a href="pdf-to-excel.html">PDF to Excel</a>
+<a href="pdf-to-ppt.html">PDF to PowerPoint</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="merge-pdf.html">Merge PDF</a>
+<a href="split-pdf.html">Split PDF</a>
+<a href="compress-pdf.html">Compress PDF</a>
+<a href="edit-pdf.html">Pdf Editor</a>
+<a href="protect-pdf.html">Protect PDF</a>
+<a href="unlock-pdf.html">Unlock PDF</a>
+<a href="watermark-pdf.html">Watermark PDF</a>
+<a href="crop-pdf.html">Crop PDF</a>
+<a href="add-page-numbers.html">Add Page Numbers</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="image-repair.html">AI Image Repair</a>
+<a href="image-compressor.html">Image Compressor</a>
+<a href="image-resizer.html">Image Resizer</a>
+<a href="image-editor.html">Image Editor</a>
+<a href="background-remover.html">Image Background Remover</a>
+<a href="ocr-image.html">OCR Image</a>
+<a href="image-watermark.html">Image Watermark Tool</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="resume-maker.html">Resume Maker</a>
+<a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
+<a href="ai-image-generator.html">AI Image Generator</a>
+<a href="marriage-card.html">Marriage Card</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="excel-unlocker.html">Excel Unlocker</a>
+<a href="protect-excel.html">Protect Excel Sheet</a>
+</div>
+</div>
+</div>
+<div class="auth-buttons">
+<a class="auth-link" href="login.html">Sign In</a>
+<a class="auth-btn" href="signup.html"><i aria-hidden="true" class="fas fa-user-plus"></i><span>Signup</span></a>
+</div>
+<div class="user-menu" data-open="false" id="user-menu">
+<button aria-expanded="false" aria-haspopup="true" aria-label="Account menu" class="user-menu-toggle" id="user-menu-toggle" type="button">
+<span aria-hidden="true" class="user-initial">U</span>
+<i aria-hidden="true" class="fas fa-chevron-down"></i>
+</button>
+<div class="user-dropdown" hidden="" id="user-dropdown">
+<a data-user-nav="dashboard-overview" href="dashboard.html#dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
+<a data-user-nav="dashboard-billing" href="dashboard.html#dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
+<a data-user-nav="dashboard-payments" href="dashboard.html#dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
+<a data-user-nav="dashboard-orders" href="dashboard.html#dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
 <a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
-<button type="button" id="logout-button" class="dropdown-logout"><i class="fas fa-sign-out-alt"></i> Sign out</button>
-</div></div>
-</nav></div>
+<button class="dropdown-logout" id="logout-button" type="button"><i class="fas fa-sign-out-alt"></i> Sign out</button>
+</div>
+</div>
+</nav>
+</div>
 </header>
 <div class="container page-wrap">
 <div class="converter-header">
@@ -86,9 +143,9 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <div class="upload-area" id="upload-area">
 <div class="upload-icon"><i class="fas fa-file-pdf"></i></div>
 <h3>Upload Your PDF Document</h3>
-<p>Drag & drop your PDF file here</p>
+<p>Drag &amp; drop your PDF file here</p>
 <p>or click to browse files</p>
-<input type="file" id="file-input" class="file-input" accept=".pdf,application/pdf">
+<input accept=".pdf,application/pdf" class="file-input" id="file-input" type="file"/>
 </div>
 <div class="file-info" id="file-info">
 <div class="file-details">
@@ -98,19 +155,19 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <p id="file-size">0 KB</p>
 </div></div></div>
 <div class="action-buttons">
-<button class="btn btn-primary" id="next-btn" disabled><i class="fas fa-arrow-right"></i> Next: Add Page Numbers</button>
+<button class="btn btn-primary" disabled="" id="next-btn"><i class="fas fa-arrow-right"></i> Next: Add Page Numbers</button>
 <button class="btn btn-secondary" id="clear-btn"><i class="fas fa-trash"></i> Clear File</button>
 </div></div>
 <div class="features">
 <div class="feature-card"><div class="feature-icon"><i class="fas fa-sliders-h"></i></div><h3>Customizable Options</h3><p>Choose position, format, style, and color of page numbers</p></div>
 <div class="feature-card"><div class="feature-icon"><i class="fas fa-eye"></i></div><h3>Live Preview</h3><p>Preview how page numbers will look before applying them</p></div>
 <div class="feature-card"><div class="feature-icon"><i class="fas fa-list-ol"></i></div><h3>Multiple Formats</h3><p>Numbers, Roman numerals, or alphabets - your choice</p></div>
-<div class="feature-card"><div class="feature-icon"><i class="fas fa-shield-alt"></i></div><h3>Secure & Private</h3><p>Your files are processed securely in your browser</p></div>
+<div class="feature-card"><div class="feature-icon"><i class="fas fa-shield-alt"></i></div><h3>Secure &amp; Private</h3><p>Your files are processed securely in your browser</p></div>
 </div></div>
 <footer>
 <div class="container footer-inner">
 <div class="footer-company-links"><span>Company</span><a href="index.html#about">About Us</a><a href="index.html#contact">Contact</a><a href="privacy-policy.html">Privacy Policy</a><a href="terms-of-service.html">Terms of Service</a></div>
-<p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF & Image Tools for everyone.</p>
+<p class="footer-brand-line">© easyjpgtopdf — Free PDF &amp; Image Tools for everyone.</p>
 <p class="footer-credits">Thanks to Font Awesome, Google Fonts, pdf-lib, FileSaver.js, Firebase, and every open-source contributor. <a href="attributions.html">See full acknowledgements</a>.</p>
 </div>
 </footer>
@@ -118,6 +175,6 @@ body{background:linear-gradient(135deg,#f5f7ff 0%,#e9ecef 100%);min-height:100vh
 <script>
 document.addEventListener('DOMContentLoaded',function(){const a=document.getElementById('upload-area'),b=document.getElementById('file-input'),c=document.getElementById('file-info'),d=document.getElementById('file-name'),e=document.getElementById('file-size'),f=document.getElementById('next-btn'),g=document.getElementById('clear-btn');let h=null;['dragenter','dragover','dragleave','drop'].forEach(i=>{a.addEventListener(i,j=>{ j.preventDefault();j.stopPropagation()},false)});['dragenter','dragover'].forEach(i=>{a.addEventListener(i,()=>a.classList.add('dragover'),false)});['dragleave','drop'].forEach(i=>{a.addEventListener(i,()=>a.classList.remove('dragover'),false)});a.addEventListener('drop',j=>{const k=j.dataTransfer.files;l(k)});a.addEventListener('click',()=>b.click());b.addEventListener('change',()=>{if(b.files.length)l(b.files)});g.addEventListener('click',()=>{h=null;b.value='';c.style.display='none';f.disabled=true});f.addEventListener('click',()=>{if(h){const m=new FileReader();m.onload=function(n){try{sessionStorage.setItem('pdfFile',n.target.result);sessionStorage.setItem('pdfFileName',h.name);window.location.href='add-page-numbers-convert.html'}catch(o){alert('File too large. Try a smaller file.')}};m.readAsDataURL(h)}});function l(p){const q=p[0];if(!q.type.includes('pdf')&&!q.name.toLowerCase().endsWith('.pdf')){alert('Please upload a valid PDF file.');return}if(q.size>500*1024*1024){alert('File size exceeds 500MB limit.');return}h=q;d.textContent=q.name;e.textContent=r(q.size);c.style.display='block';f.disabled=false}function r(s){if(s===0)return'0 Bytes';const t=1024,u=['Bytes','KB','MB','GB'],v=Math.floor(Math.log(s)/Math.log(t));return parseFloat((s/Math.pow(t,v)).toFixed(2))+' '+u[v]}});
 </script>
-<script type="module" src="js/auth.js"></script>
+<script src="js/auth.js" type="module"></script>
 </body>
 </html>
