--- a/test-donation.html
+++ b/test-donation.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Donation API - EasyJpgToPdf</title>
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/header.css"><style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Test Donation API - EasyJpgToPdf</title>
+<link href="css/footer.css" rel="stylesheet"/>
+<link href="css/header.css" rel="stylesheet"/><style>
         body {
             font-family: Arial, sans-serif;
             max-width: 800px;
@@ -83,129 +84,123 @@
 </head>
 <body>
 <header>
-    <div class="container">
-        <nav class="navbar">
-            <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
-            <div class="nav-links">
-                <div class="dropdown">
-                    <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="jpg-to-pdf.html">JPG to PDF</a>
-                        <a href="word-to-pdf.html">Word to PDF</a>
-                        <a href="excel-to-pdf.html">Excel to PDF</a>
-                        <a href="ppt-to-pdf.html">PowerPoint to PDF</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="pdf-to-jpg.html">PDF to JPG</a>
-                        <a href="pdf-to-word.html">PDF to Word</a>
-                        <a href="pdf-to-excel.html">PDF to Excel</a>
-                        <a href="pdf-to-ppt.html">PDF to PowerPoint</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="merge-pdf.html">Merge PDF</a>
-                        <a href="split-pdf.html">Split PDF</a>
-                        <a href="compress-pdf.html">Compress PDF</a>
-                        <a href="edit-pdf.html">Pdf Editor</a>
-                        <a href="protect-pdf.html">Protect PDF</a>
-                        <a href="unlock-pdf.html">Unlock PDF</a>
-                        <a href="watermark-pdf.html">Watermark PDF</a>
-                        <a href="crop-pdf.html">Crop PDF</a>
-                        <a href="add-page-numbers.html">Add Page Numbers</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="image-compressor.html">Image Compressor</a>
-                        <a href="image-resizer.html">Image Resizer</a>
-                        <a href="image-editor.html">Image Editor</a>
-                        <a href="background-remover.html">Image Background Remover</a>
-                        <a href="ocr-image.html">OCR Image</a>
-                        <a href="image-watermark.html">Image Watermark Tool</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="resume-maker.html">Resume Maker</a>
-                        <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
-                        <a href="ai-image-generator.html">AI Image Generator</a>
-                        <a href="marriage-card.html">Marriage Card</a>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
-                        <a href="protect-excel.html">Protect Excel Sheet</a>
-                    </div>
-                </div>
-            </div>
-            <div class="auth-buttons">
-                <a href="login.html" class="auth-link">Sign In</a>
-                <a href="signup.html" class="auth-btn"><i class="fas fa-user-plus" aria-hidden="true"></i><span>Signup</span></a>
-            </div>
-            <div id="user-menu" class="user-menu" data-open="false">
-                <button id="user-menu-toggle" class="user-menu-toggle" type="button" aria-haspopup="true" aria-expanded="false" aria-label="Account menu">
-                    <span class="user-initial" aria-hidden="true">U</span>
-                    <i class="fas fa-chevron-down" aria-hidden="true"></i>
-                </button>
-                <div class="user-dropdown" id="user-dropdown" hidden>
-                    <a href="dashboard.html#dashboard-overview" data-user-nav="dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
-                    <a href="dashboard.html#dashboard-billing" data-user-nav="dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
-                    <a href="dashboard.html#dashboard-payments" data-user-nav="dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
-                    <a href="dashboard.html#dashboard-orders" data-user-nav="dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders & Subscriptions</a>
-                    <a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
-                    <button type="button" id="logout-button" class="dropdown-logout"><i class="fas fa-sign-out-alt"></i> Sign out</button>
-                </div>
-            </div>
-        </nav>
-    </div>
+<div class="container">
+<nav class="navbar">
+<a class="logo" href="index.html"><img alt="Logo" src="images/logo.png" style="height:54px;"/></a>
+<div class="nav-links">
+<div class="dropdown">
+<a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="jpg-to-pdf.html">JPG to PDF</a>
+<a href="word-to-pdf.html">Word to PDF</a>
+<a href="excel-to-pdf.html">Excel to PDF</a>
+<a href="ppt-to-pdf.html">PowerPoint to PDF</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="pdf-to-jpg.html">PDF to JPG</a>
+<a href="pdf-to-word.html">PDF to Word</a>
+<a href="pdf-to-excel.html">PDF to Excel</a>
+<a href="pdf-to-ppt.html">PDF to PowerPoint</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="merge-pdf.html">Merge PDF</a>
+<a href="split-pdf.html">Split PDF</a>
+<a href="compress-pdf.html">Compress PDF</a>
+<a href="edit-pdf.html">Pdf Editor</a>
+<a href="protect-pdf.html">Protect PDF</a>
+<a href="unlock-pdf.html">Unlock PDF</a>
+<a href="watermark-pdf.html">Watermark PDF</a>
+<a href="crop-pdf.html">Crop PDF</a>
+<a href="add-page-numbers.html">Add Page Numbers</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="image-compressor.html">Image Compressor</a>
+<a href="image-resizer.html">Image Resizer</a>
+<a href="image-editor.html">Image Editor</a>
+<a href="background-remover.html">Image Background Remover</a>
+<a href="ocr-image.html">OCR Image</a>
+<a href="image-watermark.html">Image Watermark Tool</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="resume-maker.html">Resume Maker</a>
+<a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
+<a href="ai-image-generator.html">AI Image Generator</a>
+<a href="marriage-card.html">Marriage Card</a>
+</div>
+</div>
+<div class="dropdown">
+<a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
+<div class="dropdown-content">
+<a href="excel-unlocker.html">Excel Unlocker</a>
+<a href="protect-excel.html">Protect Excel Sheet</a>
+</div>
+</div>
+</div>
+<div class="auth-buttons">
+<a class="auth-link" href="login.html">Sign In</a>
+<a class="auth-btn" href="signup.html"><i aria-hidden="true" class="fas fa-user-plus"></i><span>Signup</span></a>
+</div>
+<div class="user-menu" data-open="false" id="user-menu">
+<button aria-expanded="false" aria-haspopup="true" aria-label="Account menu" class="user-menu-toggle" id="user-menu-toggle" type="button">
+<span aria-hidden="true" class="user-initial">U</span>
+<i aria-hidden="true" class="fas fa-chevron-down"></i>
+</button>
+<div class="user-dropdown" hidden="" id="user-dropdown">
+<a data-user-nav="dashboard-overview" href="dashboard.html#dashboard-overview"><i class="fas fa-user-circle"></i> Account Dashboard</a>
+<a data-user-nav="dashboard-billing" href="dashboard.html#dashboard-billing"><i class="fas fa-file-invoice"></i> Billing Details</a>
+<a data-user-nav="dashboard-payments" href="dashboard.html#dashboard-payments"><i class="fas fa-wallet"></i> Payment History</a>
+<a data-user-nav="dashboard-orders" href="dashboard.html#dashboard-orders"><i class="fas fa-clipboard-list"></i> Orders &amp; Subscriptions</a>
+<a href="accounts.html#login"><i class="fas fa-user-cog"></i> Account Center</a>
+<button class="dropdown-logout" id="logout-button" type="button"><i class="fas fa-sign-out-alt"></i> Sign out</button>
+</div>
+</div>
+</nav>
+</div>
 </header>
-
-    <div class="container">
-        <h1>🧪 Donation API Test Page</h1>
-        
-        <div class="info">
-            <strong>API Base URL:</strong> <span id="api-base-url">Loading...</span><br>
-            <strong>Test Endpoint:</strong> <span id="test-endpoint">Loading...</span>
-        </div>
-
-        <div class="test-section">
-            <h2>Test 1: Check API Endpoint</h2>
-            <p>This will verify that the API endpoint is accessible</p>
-            <button onclick="testEndpointAccess()">Test API Access</button>
-            <div id="result1" class="result" style="display:none;"></div>
-        </div>
-
-        <div class="test-section">
-            <h2>Test 2: Create Test Order</h2>
-            <p>This will attempt to create a Razorpay order</p>
-            <div>
-                <label>Amount (INR): <input type="number" id="test-amount" value="100" min="1"></label><br>
-                <label>Name: <input type="text" id="test-name" value="Test User"></label><br>
-                <label>Email: <input type="email" id="test-email" value="test@example.com"></label>
-            </div>
-            <button onclick="testCreateOrder()">Create Test Order</button>
-            <div id="result2" class="result" style="display:none;"></div>
-        </div>
-
-        <div class="test-section">
-            <h2>Test 3: Full Donation Flow</h2>
-            <p>This will test the complete donation flow with Razorpay checkout</p>
-            <button onclick="testFullDonation()">Test Full Flow</button>
-            <div id="result3" class="result" style="display:none;"></div>
-        </div>
-    </div>
-
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <script>
+<div class="container">
+<h1>🧪 Donation API Test Page</h1>
+<div class="info">
+<strong>API Base URL:</strong> <span id="api-base-url">Loading...</span><br/>
+<strong>Test Endpoint:</strong> <span id="test-endpoint">Loading...</span>
+</div>
+<div class="test-section">
+<h2>Test 1: Check API Endpoint</h2>
+<p>This will verify that the API endpoint is accessible</p>
+<button onclick="testEndpointAccess()">Test API Access</button>
+<div class="result" id="result1" style="display:none;"></div>
+</div>
+<div class="test-section">
+<h2>Test 2: Create Test Order</h2>
+<p>This will attempt to create a Razorpay order</p>
+<div>
+<label>Amount (INR): <input id="test-amount" min="1" type="number" value="100"/></label><br/>
+<label>Name: <input id="test-name" type="text" value="Test User"/></label><br/>
+<label>Email: <input id="test-email" type="email" value="test@example.com"/></label>
+</div>
+<button onclick="testCreateOrder()">Create Test Order</button>
+<div class="result" id="result2" style="display:none;"></div>
+</div>
+<div class="test-section">
+<h2>Test 3: Full Donation Flow</h2>
+<p>This will test the complete donation flow with Razorpay checkout</p>
+<button onclick="testFullDonation()">Test Full Flow</button>
+<div class="result" id="result3" style="display:none;"></div>
+</div>
+</div>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
         // Get API base URL
         const API_BASE_URL = window.location.origin;
         const CREATE_ORDER_URL = `${API_BASE_URL}/api/create-order`;
@@ -349,21 +344,21 @@
         });
     </script>
 <footer>
-    <div class="container footer-inner">
-        <div class="footer-company-links">
-            <span>Company</span>
-            <a href="index.html#about">About Us</a>
-            <a href="index.html#contact">Contact</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="terms-of-service.html">Terms of Service</a>
-        </div>
-        <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone.</p>
-        <p class="footer-credits">
+<div class="container footer-inner">
+<div class="footer-company-links">
+<span>Company</span>
+<a href="index.html#about">About Us</a>
+<a href="index.html#contact">Contact</a>
+<a href="privacy-policy.html">Privacy Policy</a>
+<a href="terms-of-service.html">Terms of Service</a>
+</div>
+<p class="footer-brand-line">© easyjpgtopdf — Free PDF &amp; Image Tools for everyone.</p>
+<p class="footer-credits">
             Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
             <a href="attributions.html">See full acknowledgements</a>.
         </p>
-    </div>
+</div>
 </footer>
-    <script src="js/auth.js"></script>
+<script src="js/auth.js"></script>
 </body>
 </html>
